# proof-of-governance

./: .gitignore  Anchor.toml  package.json
.github/: dependabot.yml
.github/workflows/: ci-anchor.yml  ci-cargo_audit.yml  ci-lint.yml
programs/governance_verifier/: Cargo.toml
programs/governance_verifier/src/: lib.rs
programs/governance_verifier/src/instructions/: claim.rs  configure.rs  mod.rs  verify.rs
programs/governance_verifier/src/state/: mod.rs  receipt.rs  verifier_state.rs
tests/: .eslintrc.js  governance_verifier.ts
tests/utils/: dual_airdrop.json  dual_airdrop_type.ts  sol_airdrop.json  sol_airdrop_type.ts  utils.ts
