[package]
name = "governance_verifier"
version = "0.1.0"
description = "Verifier for proof of voting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
sol-airdrop = { version = "0.2.0", features = [ "no-entrypoint", "cpi"] }
anchor-lang = { version = "0.26.0" }
anchor-spl = "0.26.0"
more-asserts = "0.3.1"
solana-program = "1.14.12"
spl-governance = { version = "3.1.0", features = ["no-entrypoint"] } 
